# VRE

./: .gitignore  .gitmodules  CMakeLists.txt  README.adoc
lib_includes/: clear_screen_comp.h  global_vulkan_boilerplate.h  vre.h  vulkan_boilerplate.h  window_vulkan_boilerplate.h
lib_src/: vre.cpp  vulkan_boilerplate.cpp
lib_src/vulkan_boilerplate/: debug_messenger.cpp  instance.cpp  main_boilerplate.cpp  main_global_boilerplate.cpp  main_window_boilerplate.cpp  physical_device.cpp  renderer.cpp  swapchain.cpp  util.cpp  windowing.cpp
shaders/: clear_screen.comp  to_headers.py
test/empty/: main.cpp
test/empty_test/: main.cpp
test/two_windows/: main.cpp
tools/: TO_INSERT
